tests/errors/char_const_err.uc

char more_than_one = 'aa'

char escaped_1 = ''';

char escaped_2 = '"';

char escaped_3 = '\';

char unterminated = 's

char wrong_linebreak = '
';

char wrong_tab = '  ';

char empty = '';